syntax = "proto3";

package indexer.dashboard.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/initia-labs/kvindexer/submodule/dashboard/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all)           = true;

// AccountsPerHeight is a struct that holds the account addresses for a given height
// NOTE: not all address are guaranteed to be present in the list. it's just a representation format
message AccountsPerHeight {
  int64 height = 1;
  repeated string addresses = 2;
}

// ChartData is a struct that holds the data for the dashboard chart
message ChartData {
  string date = 1;
  int64 total_value_locked = 2;
  int64 tx_count = 3;
  int64 active_accounts = 4;
  int64 new_accounts = 5;
  int64 tx_total_count = 6;
}